spire/agent_template.yaml
---
# Source: agent/templates/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: agent
  namespace: spire
  labels:
    chart: "agent-2.2.5"
    release: "agent"
    heritage: "Helm"
    app: agent
    cluster: spire.agent
spec:
  selector:
    matchLabels:
      app: agent
      spire-discover: agent
      cluster: spire.agent
  template:
    metadata:
      namespace: spire
      labels:
        spire-discover: agent
        app: agent
        cluster: spire.agent
    spec:
      hostPID: true
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      serviceAccountName: agent
      containers:
        - name: agent
          image: gcr.io/spiffe-io/spire-agent:0.12.0
          args:
            - "-config"
            - "/run/spire/config/agent.conf"
          volumeMounts:
            - name: agent-config
              mountPath: /run/spire/config
              readOnly: true
            - name: agent-socket
              mountPath: /run/spire/socket
              readOnly: false
            - name: server-bundle
              mountPath: /run/spire/bundle
              readOnly: true
            - name: agent-token
              mountPath: /run/spire/token
              readOnly: false
          livenessProbe:
            exec:
              command:
                - /opt/spire/bin/spire-agent
                - healthcheck
                - -socketPath
                - /run/spire/socket/agent.sock
            failureThreshold: 2
            initialDelaySeconds: 15
            periodSeconds: 60
            timeoutSeconds: 3
      volumes:
        - name: agent-config
          configMap:
            name: agent-config
        - name: agent-socket
          hostPath:
            path: /run/spire/socket
            type: DirectoryOrCreate
        - name: server-bundle
          configMap:
            name: server-bundle
        - name: agent-token
          projected:
            sources:
              - serviceAccountToken:
                  path: agent
                  expirationSeconds: 7200
                  audience: server
