spire/server_template.yaml
---
# Source: server/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spire
  labels:
    chart: "server-2.2.5"
    release: "spire"
    heritage: "Helm"
---
# Source: server/templates/registrar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registrar
  namespace: spire
  labels:
    chart: "server-2.2.5"
    release: "spire"
    heritage: "Helm"
spec:
  ports:
    - name: registrar
      protocol: TCP
      port: 8444
      targetPort: registrar
  selector:
    app: server
---
# Source: server/templates/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: spire
  labels:
    chart: "server-2.2.5"
    release: "spire"
    heritage: "Helm"
spec:
  type: NodePort
  ports:
    - name: server
      port: 8443
      targetPort: server
      protocol: TCP
  selector:
    app: server
---
# Source: server/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    chart: "server-2.2.5"
    release: "spire"
    heritage: "Helm"
    app: server
    cluster: spire.server
  name: server
  namespace: spire
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
      cluster: spire.server
  serviceName: server
  template:
    metadata:
      labels:
        app: server
        cluster: spire.server
      name: server
      namespace: spire
    spec:
      serviceAccountName: server
      shareProcessNamespace: true
      containers:
        - name: registrar
          image: gcr.io/spiffe-io/k8s-workload-registrar:0.12.0
          args:
            - -config
            - /run/spire/config/registrar.conf
          ports:
            - name: registrar
              containerPort: 8444
          volumeMounts:
            - name: server-config
              mountPath: /run/spire/config
              readOnly: true
            - name: server-socket
              mountPath: /run/spire/socket
              readOnly: false
            - name: server-tls
              mountPath: /run/spire/tls
              readOnly: true
        - name: server
          image:  gcr.io/spiffe-io/spire-server:0.12.0
          args:
            - -config
            - /run/spire/config/server.conf
          ports:
            - name: server
              containerPort: 8443
          volumeMounts:
            - name: server-config
              mountPath: /run/spire/config
              readOnly: true
            - name: server-data
              mountPath: /run/spire/data
              readOnly: false
            - name: server-ca
              mountPath: /run/spire/ca
              readOnly: true
            - name: server-socket
              mountPath: /run/spire/socket
              readOnly: false
          livenessProbe:
            exec:
              command:
                - /opt/spire/bin/spire-server
                - healthcheck
                - --registrationUDSPath=/run/spire/socket/registration.sock
            failureThreshold: 2
            initialDelaySeconds: 15
            periodSeconds: 60
            timeoutSeconds: 3
      volumes:
        - name: server-socket
          emptyDir:
            medium: Memory
        - name: server-ca
          secret:
            secretName: server-ca
        - name: server-config
          configMap:
            name: server-config
        - name: server-tls
          secret:
            secretName: server-tls
  volumeClaimTemplates:
    - metadata:
        name: server-data
        namespace: spire
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
---
# Source: server/templates/validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: registrar
  labels:
    chart: "server-2.2.5"
    release: "spire"
    heritage: "Helm"
webhooks:
  - name: registrar.spire.svc.cluster.local
    clientConfig:
      service:
        name: registrar
        namespace: spire
        path: "/validate"
        port: 8444
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUdDekNDQS9PZ0F3SUJBZ0lFWDllMWRUQU5CZ2txaGtpRzl3MEJBUXNGQURCOU1Rc3dDUVlEVlFRR0V3SlYKVXpFUk1BOEdBMVVFQ0JNSVZtbHlaMmx1YVdFeEV6QVJCZ05WQkFjVENrRnNaWGhoYm1SeWFXRXhGREFTQmdOVgpCQW9UQzBkeVpYa2dUV0YwZEdWeU1SUXdFZ1lEVlFRTEV3dEZibWRwYm1WbGNtbHVaekVhTUJnR0ExVUVBeE1SCmNYVnBZMnR6ZEdGeWRDQW9VbTl2ZENrd0hoY05NakF4TWpFME1UZzFOalV6V2hjTk16QXhNakV5TVRnMU5qVXoKV2pDQmhURUxNQWtHQTFVRUJoTUNWVk14RVRBUEJnTlZCQWdUQ0ZacGNtZHBibWxoTVJNd0VRWURWUVFIRXdwQgpiR1Y0WVc1a2Nt [...]
    admissionReviewVersions:
      - v1beta1
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - "v1"
        operations:
          - "CREATE"
          - "DELETE"
        resources:
          - "pods"
        scope: "Namespaced"
